--- a/assets/css/mediaQuery.css
+++ b/assets/css/mediaQuery.css
@@ -47,7 +47,8 @@
         width:100vw;
         /* height:100vh; */
         z-index: 9998;
-        top:-280px;
+        /* top:-280px; */
+        margin-top:-300px;
         position:fixed;
     }
 
