--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ header{
 
 .hashtagList li{
     margin:10px 10px 0 0;
-    color:#00000086;
+    color:#000000;
 }
 
 .headerWrapper .info button{
@@ -452,7 +452,8 @@ section.logos{
     background-size:cover;
     background-blend-mode: multiply;
     background-position: center;
-    height:40vh;
+    /* height:40vh; */
+    padding:20px 0;
     justify-content: center;
     align-items: center;
     flex-direction: row;
